Fix on z-index

--- a/src/css/PAgraph.less
+++ b/src/css/PAgraph.less
@@ -16,7 +16,7 @@ div.PAoverlay {
 	div.PAcompare {
 		
 		position: absolute;
-		z-index: 10000;
+		z-index: 10;
 		background: #fff;
 		margin-left: 60px;
 		
@@ -56,7 +56,7 @@ div.PAoverlay {
 			& > ul {
 				display: none;
 				position: absolute;
-				z-index: 20000;
+				z-index: 20;
 				top: 21px;
 				left: 18px;
 				background: 0;
@@ -147,7 +147,7 @@ div.PAoverlay {
 		position: absolute;
 		min-width: 120px;
 		background: #fff;
-		z-index: 1000;
+		z-index: 30;
 		border: 1px solid 	#ccc;
 		border-radius: 10px;
 		opacity: 0;
